--- a/messManager/src/main/resources/templates/member/update_bazar_expenses.html
+++ b/messManager/src/main/resources/templates/member/update_bazar_expenses.html
@@ -23,12 +23,13 @@
                             <label for="expenses">expenses:</label>
                             <input name="expenses" type="text" class="form-control"
                                    id="expenses" placeholder="enter here" required th:value="${bazar.expenses}"/>
+                            <small id="emailHelp" class="form-text text-muted">'Bazaar Status' will be set 'done'</small>
                         </div>
 
                         <!-- buttons field -->
 
                         <div class="container">
-                            <button type="submit" class="btn bg-primary text-white">Submit</button>
+                            <button  type="submit" class="btn bg-primary text-white">Submit</button>
                             <button type="reset" class="btn btn-warning">reset</button>
                         </div>
 
