--- a/messManager/src/main/resources/templates/about.html
+++ b/messManager/src/main/resources/templates/about.html
@@ -7,8 +7,8 @@
     <title>about page</title>
 </head>
 <body>
-<section>
-    <h1>this is about page</h1>
+<section class="bg_banner">
+    <h1 class="text-white">this is about page</h1>
 </section>
 </body>
 </html>
