--- a/messManager/src/main/resources/templates/manager/view_member.html
+++ b/messManager/src/main/resources/templates/manager/view_member.html
@@ -29,7 +29,7 @@
                             <td th:text="${c.email}"></td>
                             <td th:text="${c.phone}"></td>
                             <td>
-                                <button class="btn btn-danger btn-sm">Delete</button>
+                                <button class="btn btn-primary btn-sm">Manage</button>
                             </td>
 
                         </tr>
