--- a/messManager/src/main/resources/templates/member/base.html
+++ b/messManager/src/main/resources/templates/member/base.html
@@ -53,10 +53,12 @@
 
       <span onclick="toggleSideBar()" class="crossBtn"> &times;</span>
 
+      <h1 class="role">Member</h1>
+
       <a href="#" th:href="@{/member/index}" class="item"><i class="fa-solid fa-house"></i> &nbsp Home</a>
       <a href="#" class="item"><i class="fa-solid fa-user"></i> &nbsp Profile</a>
       <a href="#" th:href="@{/member/view-member}" class="item"><i class="fas fa-id-card-alt"></i> &nbsp View Rental Bills</a>
-      <a href="#" th:href="@{/member/viewMeal}" class="item"><i class="fas fa-plus-circle"></i> &nbsp View Meal</a>
+      <a href="#" th:href="@{/member/viewMeal}" class="item"><i class="fas fa-plus-circle"></i> &nbsp View Meal Routine</a>
       <a href="#" th:href="@{/member/bazar_dates}" class="item"><i class="fas fa-sort-amount-down"></i> &nbsp View Bazar Sequence</a>
       <div class="divider"></div>
       <a href="#" class="item"><i class="fa-solid fa-gear"></i> &nbsp Settings</a>
