--- a/messManager/src/main/resources/static/css/style.css
+++ b/messManager/src/main/resources/static/css/style.css
@@ -76,7 +76,13 @@ body{
 	text-decoration: none;
 	color:#F5F5F5;
 }
-
+.sidebar .role{
+	display: block;
+	width: 100%;
+	padding: 10px 25px;
+	text-decoration: none;
+	color:#F5F5F5;
+}
 .sidebar a:hover{
 	background: #00838F;
 }
@@ -108,6 +114,11 @@ body{
 .iconcolor{
 	color: white;
 }
-
+.check{
+	color: limegreen;
+}
+.cross{
+	color: crimson;
+}
 
 /*about page styling*/
