--- a/messManager/src/main/resources/templates/manager/base.html
+++ b/messManager/src/main/resources/templates/manager/base.html
@@ -52,13 +52,16 @@
     <div class="sidebar" >
     
     	<span onclick="toggleSideBar()" class="crossBtn"> &times;</span>
+
+        <h1 class="role" >Manager</h1>
     
     	<a href="#" th:href="@{/manager/index}" class="item"><i class="fa-solid fa-house"></i> &nbsp Home</a>
     	<a href="#" class="item"><i class="fa-solid fa-user"></i> &nbsp Profile</a>
     	<a href="#" th:href="@{/manager/view-member}" class="item"><i class="fas fa-id-card-alt"></i> &nbsp View Members</a>
     	<a href="#" th:href="@{/manager/add-member}" class="item"><i class="fas fa-pencil-alt"></i> &nbsp Add Members</a>
-    	<a href="#" th:href="@{/manager/add-meal}" class="item"><i class="fas fa-plus-circle"></i> &nbsp Add Meal</a>
-    	<a href="#" th:href="@{/manager/add_bazar_sequence}" class="item"><i class="fas fa-sort-amount-down"></i> &nbsp Add Bazar Sequence</a>
+    	<a href="#" th:href="@{/manager/add-meal}" class="item"><i class="fas fa-plus-circle"></i> &nbsp Add Meal Routine</a>
+    	<a href="#" th:href="@{/manager/add_bazar_sequence}" class="item"><i class="fas fa-sort-amount-down"></i> &nbsp Add Bazaar Sequence</a>
+    	<a href="#" th:href="@{/manager/view_bazar_sequence}" class="item"><i class="fas fa-sort-amount-down"></i> &nbsp View Bazaar Sequence</a>
     	<div class="divider"></div>
     	<a href="#" class="item"><i class="fa-solid fa-gear"></i> &nbsp Settings</a>
     </div>
