--- a/messManager/src/main/resources/templates/manager/base.html
+++ b/messManager/src/main/resources/templates/manager/base.html
@@ -60,6 +60,7 @@
     	<a href="#" th:href="@{/manager/view-member}" class="item"><i class="fas fa-id-card-alt"></i> &nbsp View Members</a>
     	<a href="#" th:href="@{/manager/add-member}" class="item"><i class="fas fa-pencil-alt"></i> &nbsp Add Members</a>
     	<a href="#" th:href="@{/manager/add-meal}" class="item"><i class="fas fa-plus-circle"></i> &nbsp Add Meal Routine</a>
+    	<a href="#" th:href="@{/manager/view_meal_chart}" class="item"><i class="fa-solid fa-eye"></i> &nbsp View Meal Chart</a>
     	<a href="#" th:href="@{/manager/add_bazar_sequence}" class="item"><i class="fas fa-sort-amount-down"></i> &nbsp Add Bazaar Sequence</a>
     	<a href="#" th:href="@{/manager/view_bazar_sequence}" class="item"><i class="fas fa-sort-amount-down"></i> &nbsp View Bazaar Sequence</a>
     	<div class="divider"></div>
