--- a/messManager/src/main/resources/templates/member/base.html
+++ b/messManager/src/main/resources/templates/member/base.html
@@ -59,6 +59,7 @@
       <a href="#" class="item"><i class="fa-solid fa-user"></i> &nbsp Profile</a>
       <a href="#" th:href="@{/member/view-member}" class="item"><i class="fas fa-id-card-alt"></i> &nbsp View Rental Bills</a>
       <a href="#" th:href="@{/member/viewMeal}" class="item"><i class="fas fa-plus-circle"></i> &nbsp View Meal Routine</a>
+      <a href="#" th:href="@{/member/view_meal_chart}" class="item"><i class="fa-solid fa-eye"></i> &nbsp View Meal Counts</a>
       <a href="#" th:href="@{/member/bazar_dates}" class="item"><i class="fas fa-sort-amount-down"></i> &nbsp View Bazar Sequence</a>
       <div class="divider"></div>
       <a href="#" class="item"><i class="fa-solid fa-gear"></i> &nbsp Settings</a>
