--- a/messManager/src/main/resources/templates/manager/view_meal_chart_PerMember.html
+++ b/messManager/src/main/resources/templates/manager/view_meal_chart_PerMember.html
@@ -10,6 +10,7 @@
 <section>
     <div class="card mr-3 ml-3">
         <div class="card-body">
+            <a th:href= "@{/manager/view_meal_chart}" class="back"><i class="fa-solid fa-arrow-left"></i></a>
             <h1 class="text-center">Meal Counts</h1>
             <div class="table-responsive">
                 <table class="table table-striped">
