--- a/messManager/src/main/resources/templates/member/take_meal.html
+++ b/messManager/src/main/resources/templates/member/take_meal.html
@@ -46,6 +46,7 @@
                         <div class="container">
                             <button  type="submit" class="btn bg-primary text-white">Submit</button>
                             <button type="reset" class="btn btn-warning">reset</button>
+                            <a th:href="@{/member/viewMeal}" type="button" class="btn btn-danger cancleBtn ">cancel</a>
                         </div>
 
                     </form>
